<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@mipmap/my_pic"
        android:contentDescription="@string/image"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:lines="1"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/image_view"
        android:layout_toEndOf="@+id/image_view"
        android:layout_alignParentTop="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/birthday_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/lighter_blue"
        android:layout_below="@+id/image_view"
        android:layout_alignStart="@+id/birthday_fill"
        android:layout_alignEnd="@+id/hometown_title"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/birthday_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_fill"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/birthday_title"/>

    <TextView
        android:id="@+id/hometown_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hometown_title"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/lighter_blue"
        android:layout_below="@id/birthday_fill"/>
    <TextView
        android:id="@+id/hometown_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hometown_fill"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/hometown_title"
        />

    <TextView
        android:id="@+id/hobbies_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/hobbies"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/lighter_blue"
        android:layout_below="@id/hometown_fill"/>

    <TextView
        android:id="@+id/hobbies_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies_fill"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/hobbies_title"
        />

    <TextView
        android:id="@+id/about_me_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/lighter_blue"
        android:layout_below="@id/hobbies_fill"/>
    <TextView
        android:id="@+id/about_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_fill"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/about_me_title"
        />
    <Button
        android:id="@+id/button_layout_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        android:layout_below="@id/about_fill"
        />


</RelativeLayout>
