<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:src="@mipmap/my_pic"
            android:contentDescription="@string/image"
            android:layout_weight="0"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:layout_gravity="center"
            android:layout_weight="0.30"
            android:lines="1"
            android:textSize="25sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/birthday_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/lighter_blue"/>

        <TextView
            android:id="@+id/birthday_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_fill"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hometown_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hometown_title"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/lighter_blue"/>

            <TextView
                android:id="@+id/hometown_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hometown_fill"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hobbies_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/lighter_blue"/>

            <TextView
                android:id="@+id/hobbies_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies_fill"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_me_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/lighter_blue"/>

            <TextView
                android:id="@+id/about_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fill"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_layout_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"/>


</LinearLayout>